--- a/.github/workflows/azure-webapps-deploy.yml
+++ b/.github/workflows/azure-webapps-deploy.yml
@@ -1,7 +1,7 @@
 name: Build and deploy a container to an Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: hogwarts-artifacts-online
+  AZURE_WEBAPP_NAME: hogwarts-artifacts-online # Change this to your webapp name.
 
 on:
   push:
