--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=hogwarts-artifacts-online
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:hogwarts;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Enable H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=false
+
+# Show SQL statements
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# Server Configuration
+server.port=8081
